Adds completion of modules topic